# ez-utils

./: .clang-format  .gitignore  CMakeLists.txt  compile-options.cmake  custom-build-profiles.cmake  dependencies.cmake  tests-config.cmake
include/ez/utils/: badge.h  enum-arithmetic.h  generator.h  match.h  recursive_generator.h  type-conversion.h  type-traits.h  utils.h
tests/: CMakeLists.txt  badge.test.cpp  cstr-to-uint.test.cpp  cstr_to_uint.test.cpp  enum-arithmetic.test.cpp  generator.test.cpp  match.test.cpp  recursive_generator.test.cpp  to-signed.test.cpp  to-unsigned.test.cpp  to_signed.test.cpp  type-traits.test.cpp
